# getSecrets

./: README.md  old_setup.py  pack.sh  pyproject.toml  setup.py
src/: get_secrets.py
src/getSecrets/: __init__.py
tests/: test_getsecrets.py
