[project]
name = "get_hc_secrets"
version = '1.5.9'
authors = [
    { name = "Xavier Mayeur", email = "xavier@mayeur.be" }
]
description = "A package to read secrets from Hashicorp vault"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ['pyyaml', 'requests']

[project.urls]
"Homepage" = "https://github.com/xmayeur/getSecrets"
"Bug Tracker" = "https://github.com/xmayeur/getSecrets/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

